@@ -27,15 +27,20 @@
     "PDF::Action::Thread": "lib/PDF/Action/Thread.rakumod",
     "PDF::Action::URI": "lib/PDF/Action/URI.rakumod",
     "PDF::Annot": "lib/PDF/Annot.rakumod",
+    "PDF::Annot::_Markup": "lib/PDF/Annot/_Markup.rakumod",
+    "PDF::Annot::_TextMarkup": "lib/PDF/Annot/_TextMarkup.rakumod",
     "PDF::Annot::Caret": "lib/PDF/Annot/Caret.rakumod",
     "PDF::Annot::Circle": "lib/PDF/Annot/Circle.rakumod",
     "PDF::Annot::FileAttachment": "lib/PDF/Annot/FileAttachment.rakumod",
+    "PDF::Annot::Highlight": "lib/PDF/Annot/Highlight.rakumod",
     "PDF::Annot::Link": "lib/PDF/Annot/Link.rakumod",
-    "PDF::Annot::Markup": "lib/PDF/Annot/Markup.rakumod",
     "PDF::Annot::Popup": "lib/PDF/Annot/Popup.rakumod",
     "PDF::Annot::Square": "lib/PDF/Annot/Square.rakumod",
+    "PDF::Annot::Squiggly": "lib/PDF/Annot/Squiggly.rakumod",
+    "PDF::Annot::StrikeOut": "lib/PDF/Annot/StrikeOut.rakumod",
     "PDF::Annot::Text": "lib/PDF/Annot/Text.rakumod",
     "PDF::Annot::ThreeD": "lib/PDF/Annot/ThreeD.rakumod",
+    "PDF::Annot::Underline": "lib/PDF/Annot/Underline.rakumod",
     "PDF::Annot::Widget": "lib/PDF/Annot/Widget.rakumod",
     "PDF::Appearance": "lib/PDF/Appearance.rakumod",
     "PDF::Bead-Thread": "lib/PDF/Bead-Thread.rakumod",
