@@ -1,8 +1,8 @@
 use v6;
-use PDF::Annot::Markup;
+use PDF::Annot::_Markup;
 
 class PDF::Annot::FileAttachment
-    is PDF::Annot::Markup {
+    is PDF::Annot::_Markup {
 
     use PDF::COS;
     use PDF::COS::Tie;
