@@ -1,0 +1,2 @@
+use PDF::Annot::_TextMarkup;
+unit class PDF::Annot::Underline is PDF::Annot::_TextMarkup;
