@@ -1,5 +1,6 @@
 Release 0.4.0
 - Rename modules *.pm -> *.rakumod and scripts *.p6 -> *.raku
+- Add annotation classes: Highlight, Underline, Squiggly, StrikeOut
 
 Release 0.3.9
 - Rename PDF::StructElem.structure-type() alias to .tag()
